# CEIA-ProcesamientoLenguajeNaturalI

./: .gitignore  Desafio_1.ipynb  README.md  pyproject.toml
Desafio_1/: Desafio_1.ipynb
Desafio_2/: Desafio_2.ipynb
Desafio_3/: Desafio_3.ipynb  char2idx.npy  history_ppl_gru.npy  history_ppl_gru_adam.npy  history_ppl_gru_stacked.npy  history_ppl_lstm.npy  history_ppl_rnn.npy  idx2char.npy  model_gru.keras  model_gru.weights.h5  model_gru_adam.keras  model_gru_adam.weights.h5  model_gru_stacked.keras  model_gru_stacked.weights.h5  model_lstm.keras  model_lstm.weights.h5  model_rnn.keras  model_rnn.weights.h5  my_model.keras
Desafio_3/.gradio/flagged/: dataset1.csv
Desafio_3/Generacion Secuencias/: secuencias_generadas.csv  secuencias_generadas_2.csv  secuencias_generadas_3.csv
Desafio_4/: Desafio_4.ipynb
Desafio_4/Dataset/: spa-eng.zip9f47d6zm.part
Desafio_4/Modelos_entrenados/Aumentar_capas_LSTM/: config.pth  history.json  input_tokenizer.pkl  output_tokenizer.pkl  word2idx_outputs.pkl
Desafio_4/Modelos_entrenados/Aumentar_datos/: config.pth  embedding_matrix.npy  history.json  input_tokenizer.pkl  output_tokenizer.pkl  word2idx_inputs.pkl  word2idx_outputs.pkl
Desafio_4/Modelos_entrenados/Aumentar_hidden_size/: config.pth  history.json  output_tokenizer.pkl
Desafio_4/Modelos_entrenados/Aumentar_secuencias/: config.pth  history.json  input_tokenizer.pkl
Desafio_4/Modelos_entrenados/Baseline/: config.pth  embedding_matrix.npy  history.json  input_tokenizer.pkl  output_tokenizer.pkl
Desafio_4/Modelos_entrenados/Embedding_encoder_con_attention/: config.pth  embedding_matrix.npy  history.json  input_tokenizer.pkl  output_tokenizer.pkl
Desafio_4/Modelos_entrenados/Embedding_encoder_entrenable/: history.json  input_tokenizer.pkl
Desafio_4/Modelos_entrenados/LSTM_bidireccional/: config.pth  history.json  input_tokenizer.pkl  output_tokenizer.pkl  word2idx_inputs.pkl
