[project]
name = "ceia-procesamientolenguajenaturali"
version = "0.1.0"
description = ""
authors = [
    {name = "Agustin Lopez Fredes",email = "agustin.lopezfredes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "numpy (<2.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "keras (>=3.11.3,<4.0.0)",
    "gradio (>=5.47.2,<6.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch_cuda"}
torchvision = {source = "pytorch_cuda"}
torchaudio = {source = "pytorch_cuda"}
